# procesamiento-de-imagenes

Taller1-OpenCV/: CMakeLists.txt  README.md
Taller1-OpenCV/src/: image_converter.cpp  test_camera.cpp
Taller2/: CMakeLists.txt  Taller Color.md
Taller2-color/: README.md  main.cpp
Taller3-Backgrounds/: CMakeLists.txt  README.md  main.cpp
Taller3-Backgrounds/include/: background_models.hpp
Taller3-Backgrounds/src/: background_models.cpp  frame.cpp  running_average_manual.cpp
